--- a/Movie Nerd/Base.lproj/Main.storyboard
+++ b/Movie Nerd/Base.lproj/Main.storyboard
@@ -30,25 +30,40 @@
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="299.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zJ9-gq-XC2">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zJ9-gq-XC2">
                                                     <rect key="frame" x="0.0" y="0.0" width="374" height="233"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dcB-c0-4ET">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dcB-c0-4ET">
                                                     <rect key="frame" x="20" y="241" width="334" height="18"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="18" id="Uhw-YO-6Xh"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QjH-fw-AJU">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QjH-fw-AJU">
                                                     <rect key="frame" x="20" y="267" width="334" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="IBC-MK-27l"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="zJ9-gq-XC2" secondAttribute="trailing" id="AKD-8R-I6L"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="QjH-fw-AJU" secondAttribute="bottom" constant="1" id="CgC-ot-jmS"/>
+                                                <constraint firstItem="dcB-c0-4ET" firstAttribute="top" secondItem="zJ9-gq-XC2" secondAttribute="bottom" constant="8" symbolic="YES" id="JBD-54-7gH"/>
+                                                <constraint firstItem="QjH-fw-AJU" firstAttribute="top" secondItem="dcB-c0-4ET" secondAttribute="bottom" constant="8" symbolic="YES" id="LbL-XB-haU"/>
+                                                <constraint firstItem="zJ9-gq-XC2" firstAttribute="centerX" secondItem="dcB-c0-4ET" secondAttribute="centerX" id="XBB-Nh-rKZ"/>
+                                                <constraint firstItem="zJ9-gq-XC2" firstAttribute="top" secondItem="LhO-yI-DB4" secondAttribute="top" id="YN3-AS-Bpd"/>
+                                                <constraint firstItem="dcB-c0-4ET" firstAttribute="leading" secondItem="LhO-yI-DB4" secondAttribute="leadingMargin" id="bvh-Yc-f5y"/>
+                                                <constraint firstItem="dcB-c0-4ET" firstAttribute="trailing" secondItem="QjH-fw-AJU" secondAttribute="trailing" id="da9-jb-2H9"/>
+                                                <constraint firstItem="dcB-c0-4ET" firstAttribute="leading" secondItem="QjH-fw-AJU" secondAttribute="leading" id="mRY-WD-BhB"/>
+                                                <constraint firstItem="zJ9-gq-XC2" firstAttribute="leading" secondItem="LhO-yI-DB4" secondAttribute="leading" id="wPN-NG-x5R"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="MovieTitle" destination="dcB-c0-4ET" id="Cpl-zx-7gD"/>
