--- a/Movie Nerd/Base.lproj/Main.storyboard
+++ b/Movie Nerd/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="i2i-81-yYh">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -18,9 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FWx-iJ-nwC">
-                                <rect key="frame" x="20" y="39" width="374" height="818"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FWx-iJ-nwC">
+                                <rect key="frame" x="20" y="88" width="374" height="769"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieRow" rowHeight="372" id="tbg-1u-xw5" customClass="movieRow" customModule="Movie_Nerd" customModuleProvider="target">
@@ -66,27 +65,108 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="ArtistName" destination="QjH-fw-AJU" id="dyB-ON-zoB"/>
                                             <outlet property="MovieTitle" destination="dcB-c0-4ET" id="Cpl-zx-7gD"/>
                                             <outlet property="moviePoster" destination="zJ9-gq-XC2" id="Nfq-hE-u7S"/>
-                                            <outlet property="releaseDate" destination="QjH-fw-AJU" id="XO6-pN-yHZ"/>
+                                            <segue destination="vlG-OT-Z54" kind="show" id="we5-s4-zVQ"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="FWx-iJ-nwC" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="FCh-uM-x2e"/>
+                            <constraint firstItem="FWx-iJ-nwC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="MoG-wY-zQb"/>
+                            <constraint firstItem="FWx-iJ-nwC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Rxs-m1-old"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="FWx-iJ-nwC" secondAttribute="bottom" constant="5" id="iua-K9-zkg"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="UpL-wA-Tid"/>
                     <connections>
                         <outlet property="movieList" destination="FWx-iJ-nwC" id="wM4-zb-JJF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="131.8840579710145" y="138.61607142857142"/>
+            <point key="canvasLocation" x="563.768115942029" y="136.60714285714286"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="PbT-r4-IHa">
+            <objects>
+                <viewController id="vlG-OT-Z54" customClass="detailViewController" customModule="Movie_Nerd" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Gq0-qM-NRi">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sqg-x7-Zn1">
+                                <rect key="frame" x="0.0" y="88" width="414" height="792"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Sqg-x7-Zn1" firstAttribute="top" secondItem="rTu-kX-Uk8" secondAttribute="top" id="9MT-Vs-cgG"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="Sqg-x7-Zn1" secondAttribute="bottom" constant="-18" id="9bg-g6-IWd"/>
+                            <constraint firstAttribute="trailing" secondItem="Sqg-x7-Zn1" secondAttribute="trailing" id="Ee5-PO-gSZ"/>
+                            <constraint firstItem="Sqg-x7-Zn1" firstAttribute="leading" secondItem="Gq0-qM-NRi" secondAttribute="leading" id="yDO-Bf-TjU"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="rTu-kX-Uk8"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="A9W-XY-pzI"/>
+                    <connections>
+                        <outlet property="poster_Image" destination="Sqg-x7-Zn1" id="vP0-T2-OEe"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eFA-9J-5TW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1214.4927536231885" y="136.60714285714286"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="GoX-QN-114">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="i2i-81-yYh" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="s9d-Cn-MGn">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="VRH-s5-Z7r"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Zml-Us-cKi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="564" y="-541"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="EOo-cv-VPC">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kyg-re-FQ5" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mJb-69-9Uq">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vlG-OT-Z54" kind="relationship" relationship="rootViewController" id="C0b-Oy-UUh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dVy-s8-Jeu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1255" y="-541"/>
         </scene>
     </scenes>
     <resources>
         <image name="placeholder" width="622" height="415"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="we5-s4-zVQ"/>
+    </inferredMetricsTieBreakers>
 </document>
