--- a/Movie Nerd/Base.lproj/Main.storyboard
+++ b/Movie Nerd/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Top Movies-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Movie_Nerd" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FWx-iJ-nwC">
-                                <rect key="frame" x="20" y="88" width="374" height="769"/>
+                                <rect key="frame" x="20" y="88" width="374" height="720"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieRow" rowHeight="372" id="tbg-1u-xw5" customClass="movieRow" customModule="Movie_Nerd" customModuleProvider="target">
@@ -83,6 +83,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Top Movies" id="bVJ-9h-kXL"/>
                     <navigationItem key="navigationItem" id="UpL-wA-Tid"/>
                     <connections>
                         <outlet property="movieList" destination="FWx-iJ-nwC" id="wM4-zb-JJF"/>
@@ -90,9 +91,9 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="563.768115942029" y="136.60714285714286"/>
+            <point key="canvasLocation" x="1473.913043478261" y="136.60714285714286"/>
         </scene>
-        <!--Detail View Controller-->
+        <!--Item-->
         <scene sceneID="PbT-r4-IHa">
             <objects>
                 <viewController id="vlG-OT-Z54" customClass="detailViewController" customModule="Movie_Nerd" customModuleProvider="target" sceneMemberID="viewController">
@@ -100,27 +101,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zNg-C6-ACh">
+                                <rect key="frame" x="20" y="116" width="374" height="38"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sqg-x7-Zn1">
                                 <rect key="frame" x="0.0" y="88" width="414" height="792"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="rTu-kX-Uk8" firstAttribute="bottom" secondItem="zNg-C6-ACh" secondAttribute="bottom" constant="708" id="5Tr-QN-qS3"/>
+                            <constraint firstItem="zNg-C6-ACh" firstAttribute="top" secondItem="rTu-kX-Uk8" secondAttribute="top" constant="28" id="6Zf-dc-O15"/>
                             <constraint firstItem="Sqg-x7-Zn1" firstAttribute="top" secondItem="rTu-kX-Uk8" secondAttribute="top" id="9MT-Vs-cgG"/>
                             <constraint firstAttribute="bottomMargin" secondItem="Sqg-x7-Zn1" secondAttribute="bottom" constant="-18" id="9bg-g6-IWd"/>
                             <constraint firstAttribute="trailing" secondItem="Sqg-x7-Zn1" secondAttribute="trailing" id="Ee5-PO-gSZ"/>
+                            <constraint firstItem="zNg-C6-ACh" firstAttribute="leading" secondItem="Gq0-qM-NRi" secondAttribute="leadingMargin" id="JIb-7O-2lb"/>
+                            <constraint firstItem="zNg-C6-ACh" firstAttribute="centerX" secondItem="Sqg-x7-Zn1" secondAttribute="centerX" id="ThF-Vh-lQz"/>
                             <constraint firstItem="Sqg-x7-Zn1" firstAttribute="leading" secondItem="Gq0-qM-NRi" secondAttribute="leading" id="yDO-Bf-TjU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="rTu-kX-Uk8"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="r2l-Jf-EeX"/>
                     <navigationItem key="navigationItem" id="A9W-XY-pzI"/>
                     <connections>
+                        <outlet property="Movie_title" destination="zNg-C6-ACh" id="lxx-OR-q0P"/>
                         <outlet property="poster_Image" destination="Sqg-x7-Zn1" id="vP0-T2-OEe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eFA-9J-5TW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1214.4927536231885" y="136.60714285714286"/>
+            <point key="canvasLocation" x="2124.6376811594205" y="136.60714285714286"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GoX-QN-114">
@@ -135,7 +148,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="VRH-s5-Z7r"/>
+                        <segue destination="bhB-j1-tn4" kind="relationship" relationship="rootViewController" id="VRH-s5-Z7r"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zml-Us-cKi" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -152,6 +165,14 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="textShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -161,6 +182,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dVy-s8-Jeu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1255" y="-541"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="8ak-qs-DGs">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="bhB-j1-tn4" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="os8-Kr-rOw"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4hI-O0-sDf">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="P7F-fs-Fpg"/>
+                        <segue destination="vlG-OT-Z54" kind="relationship" relationship="viewControllers" id="Hy5-ZU-tbR"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1nc-Oo-zZL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="563.768115942029" y="136.60714285714286"/>
         </scene>
     </scenes>
     <resources>
